# Socks-shop-python

./: .Dockerfile  .env.example  .gitIgnore  CONFIG_SETUP.md  pyproject.toml
src/config/: environments.py  settings.py
src/core/: browser_constants.py  browser_manager.py  exceptions.py  logger.py  retry.py
src/core/exceptions/: automation_exception.py  base.py  browser.py  element.py  enums.py  network.py  timeout.py  utils.py
src/models/: base.py  product.py  user.py
src/pages/: base_page.py
src/utils/: assertion_helpers.py
tests/e2e/: test.py
tests/integration/: test_configuration_integration.py
